tests/ui/impl-trait/in-trait/deep-match.stderr
error[E0053]: method `bar` has an incompatible return type for trait
  --> $DIR/deep-match.rs:11:17
   |
LL |     fn bar() -> i32 {
   |                 ^^^
   |                 |
   |                 expected `Wrapper<_>`, found `i32`
   |                 return type in trait
   |
   = note: expected struct `Wrapper<_>`
                found type `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
